--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>RemontPro</artifactId>
+    <artifactId>Kurs_</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>RemontPro</name>
     <description>RemontPro</description>
