--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 testing.app.secret = sdwlw851kftsyfds345m1234567890123456
 testing.app.lifetime=7200000
+
+youtube.api.key=AIzaSyB82tXUW1ecn0Tb6pn0iXWr_5nK8mKsF4Q
+youtube.api.url=https://youtu.be/a7JM2SnlYRI?si=2R5PnfAAQfzrj8KM
